[package]
name = "image_bench"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
structopt = "0.3"

image = "0.23"
rayon = "1.5.1"
tempfile = "3"
csv = "1.1"

[[bin]]
name = "metric"
path = "./metric.rs"
